--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ reqwest = "0.12.22"
 serde_json = "1"
 serde = "1"
 smol-hyper = "0.1.1"
-tokio = "1"
+tokio = {version = "1.47.1", features = ["full"]}
 bcs = { version = "0.1" }
 smol-macros = "0.1.1"
 smol = "2.0.2"
@@ -45,6 +45,11 @@ noir = { git = "https://github.com/piotr-stec/noir-rs", branch = "add/keccak-fla
 ] }
 k256 = { version = "0.13.4", features = ["ecdsa"] }
 blake3 = "1.6.0"
+alloy-contract = "1.0.24"
+alloy-sol-types = "1.3.0"
+alloy-provider = "1.0.24"
+alloy-primitives = "1.3.0"
+
 
 
 [dev-dependencies]
