--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ bincode = { version = "1.3.3" }
 regex = "1.11.1"
 hex = "0.4.3"
 anyhow = "1.0.98"
-noir = { git = "https://github.com/piotr-stec/noir-rs", branch = "add/keccak-flavor-bindings", features = [
+noir = { git = "https://github.com/zkmopro/noir-rs", features = [
   "barretenberg",
 ] }
 k256 = { version = "0.13.4", features = ["ecdsa"] }
